--- a/CollierUX/windows/CollierUX/App.xaml
+++ b/CollierUX/windows/CollierUX/App.xaml
@@ -1,8 +1,8 @@
 ﻿<react:ReactApplication
-    x:Class="CollierUX.App"
+    x:Class="collierux.App"
     xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
     xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
-    xmlns:local="using:CollierUX"
+    xmlns:local="using:collierux"
     xmlns:react="using:Microsoft.ReactNative">
     <Application.Resources>
         <XamlControlsResources xmlns="using:Microsoft.UI.Xaml.Controls" />
